T-Rex-Learn inital commit
Add support for multiple t-rexes
Each t-rex has a nueral network
The neural network controls the the t-rex

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
     <title >chrome easter egg: t-rex runner</title>
     <link rel="stylesheet" href="index.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/synaptic/1.1.4/synaptic.js"></script>
+    <script src="config.js"></script>
+    <script src="controller.js"></script>
+    <script src="dinos.js"></script>
+    <script src="distanceMeter.js"></script>
+    <script src="runner.js"></script>
+    <script src="collisionBox.js"></script>
+    <script src="obstacle.js"></script>
+    <script src="horizon.js"></script>
+    <script src="gameOver.js"></script>
+    <script src="tRex.js"></script>
     <script src="index.js"></script>
 </head>
 
